--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179"
+     crossorigin="anonymous"></script>
   <title>BlackScript</title>
   <link rel="shortcut icon" type="image" href="BlackScript-image.png">
   <style>
