--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179"
      crossorigin="anonymous"></script>
-  <title>BlackScript</title>
+  <title></title>
   <link rel="shortcut icon" type="image" href="BlackScript-image.png">
   <style>
     .header {
