--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179"
      crossorigin="anonymous"></script>
-  <title>BlackScript</title>
+  <title>BlackScript                    By Calle</title>
   <link rel="shortcut icon" type="image" href="BlackScript-image.png">
   <style>
     .header {
@@ -80,8 +80,7 @@
       cursor: pointer;
     }
   </style>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179" crossorigin="anonymous"></script>
-</head>
+  </head>
 <body>
 <div class="header">
   <h1>BlackScript</h1>
