--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179"
-     crossorigin="anonymous"></script>
   <title>BlackScript By Calle</title>
   <link rel="shortcut icon" type="image" href="BlackScript-image.png">
   <style>
@@ -80,7 +78,11 @@
       cursor: pointer;
     }
   </style>
-  </head>
+
+  <!-- Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179" crossorigin="anonymous"></script>
+
+</head>
 <body>
 <div class="header">
   <h1>BlackScript</h1>
