--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       cursor: pointer;
     }
   </style>
-
+  
   <!-- Google AdSense Code -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179" crossorigin="anonymous"></script>
 
@@ -96,6 +96,18 @@
       <h2><button id="Save" type="button" onclick="saveText()">Save Code</button></h2>
       <h2><a id="downloadLink" href="#" style="display:none">Download Code</a></h2>
     </form>
+    
+    <!-- Google AdSense Ad -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-2204566051524179"
+         data-ad-slot="8269783049"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    
     <img src="BlackScript-image.png" alt="Example Image" width="300" height="auto">
     <script>
       function saveText() {
