--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       cursor: pointer;
     }
   </style>
-  </head>
+  
+  <!-- Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179" crossorigin="anonymous"></script>
+
+</head>
 <body>
 <div class="header">
   <h1>BlackScript</h1>
@@ -92,6 +96,22 @@
       <h2><button id="Save" type="button" onclick="saveText()">Save Code</button></h2>
       <h2><a id="downloadLink" href="#" style="display:none">Download Code</a></h2>
     </form>
+    
+    <!-- Placera Adsense-koden här -->
+    <div style="margin: 20px auto; text-align: center;">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2204566051524179" crossorigin="anonymous"></script>
+      <!-- Ad 1 -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-2204566051524179"
+           data-ad-slot="8269783049"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+    
     <img src="BlackScript-image.png" alt="Example Image" width="300" height="auto">
     <script>
       function saveText() {
