--- a/index.html
+++ b/index.html
@@ -4,44 +4,43 @@
   <title>BlackScript By Calle</title>
   <link rel="shortcut icon" type="image" href="BlackScript-image.png">
   <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
     .header {
       background-color: black;
       color: white;
       text-align: center;
       padding: 5px;
     }
+
     .nav {
-      line-height: 30px;
       background-color: black;
       color: white;
-      height: 420px;
+      overflow: hidden;
+    }
+
+    .nav .main {
+      float: left;
+      width: calc(100% - 180px); /* Adjust as needed */
+      padding: 20px;
+    }
+
+    .nav .sidebar {
+      float: left;
       width: 180px;
-      float: left;
-      padding: 5px;
+      padding: 20px;
+      height: 100vh; /* Adjust as needed */
     }
-    .main {
-      width: 950px;
-      float: left;
-      padding: 60px;
+
+    .main textarea {
+      width: 100%;
+      max-width: 539px;
     }
-    .fot {
-      background-color: black;
-      color: white;
-      clear: both;
-      text-align: center;
-      padding: 5px;
-    }
-    .img {
-      margin: 10px;
-      padding: 5px;
-      padding-left: 5px;
-      border: 1px solid #0000ff;
-      height: auto;
-      width: auto;
-      float: right;
-      text-align: center;
-    }
-    #downloadLink {
+
+    .button {
       background-color: #000000; /* Black */
       border: none;
       color: white;
@@ -52,33 +51,35 @@
       font-size: 16px;
       border-radius: 5px;
       cursor: pointer;
+      margin-top: 10px;
     }
+
     #Save {
       background-color: #FFA500; /* Orange */
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
     }
-    #Copy-code {
+
+    #downloadLink {
       background-color: lime; /* Lime */
-      border: none;
+      display: none;
+    }
+
+    .footer {
+      background-color: black;
       color: white;
-      padding: 10px 20px;
       text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
+      padding: 5px;
+      clear: both;
+    }
+
+    .img-container {
+      margin: 10px;
+      padding: 5px;
+      border: 1px solid #0000ff;
+      float: right;
+      text-align: center;
     }
   </style>
-  </head>
+</head>
 <body>
 <div class="header">
   <h1>BlackScript</h1>
@@ -86,31 +87,35 @@
 <div class="nav">
   <div class="main">
     <form>
-      <textarea id="myText" rows="10" cols="50" style="width: 539px;"></textarea>
+      <textarea id="myText" rows="10" cols="50"></textarea>
       <br>
-      <br>
-      <h2><button id="Save" type="button" onclick="saveText()">Save Code</button></h2>
-      <h2><a id="downloadLink" href="#" style="display:none">Download Code</a></h2>
+      <button class="button" id="Save" type="button" onclick="saveText()">Save Code</button>
+      <a class="button" id="downloadLink" href="#">Download Code</a>
     </form>
-    <img src="BlackScript-image.png" alt="Example Image" width="300" height="auto">
-    <script>
-      function saveText() {
-        var text = document.getElementById("myText").value;
-        var blob = new Blob([text], {type: "text/plain"});
-        var url = URL.createObjectURL(blob);
-        var downloadLink = document.getElementById("downloadLink");
-        downloadLink.href = url;
-        downloadLink.download = "BlackScript-Website.html";
-        downloadLink.style.display = "block";
-      }
-    </script>
-    <div style="text-align:right;position:fixed;z-index:9999999;bottom:0;width:auto;right:1%;cursor:pointer;line-height:0;display:block!important">
-      <iframe width="500" height="300" src="https://www.youtube.com/embed/kUMe1FH4CHE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+    <div class="img-container">
+      <img src="BlackScript-image.png" alt="Example Image" width="300" height="auto">
     </div>
-    <div style="text-align:right;position:fixed;z-index:9999999;bottom:0;width:auto;right:12%;cursor:pointer;line-height:40;display:block!important">
+  </div>
+  <div class="sidebar">
+    <iframe width="100%" height="300" src="https://www.youtube.com/embed/kUMe1FH4CHE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+    <div class="img-container">
       <img src="BlackScript-image.png" alt="Example Image" width="160" height="auto">
     </div>
   </div>
 </div>
+<div class="footer">
+  &copy; 2023 BlackScript By Calle
+</div>
+<script>
+  function saveText() {
+    var text = document.getElementById("myText").value;
+    var blob = new Blob([text], {type: "text/plain"});
+    var url = URL.createObjectURL(blob);
+    var downloadLink = document.getElementById("downloadLink");
+    downloadLink.href = url;
+    downloadLink.download = "BlackScript-Website.html";
+    downloadLink.style.display = "inline-block";
+  }
+</script>
 </body>
 </html>
