--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      background-color: black; /* Black background */
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -129,7 +129,7 @@
   </div>
 </div>
 <div class="footer">
-  &copy; 2023 BlackScript
+  &copy; 2023 BlackScript By Calle
 </div>
 <script>
   function saveText() {
