--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       font-size: 16px;
       border-radius: 5px;
       cursor: pointer;
+      outline: none; /* Remove outline */
     }
 
     #Save {
@@ -101,6 +102,11 @@
       width: 100%;
       height: 300px;
       border: none;
+    }
+
+    img,
+    a {
+      outline: none; /* Remove outline for images and links */
     }
   </style>
 </head>
